# SimpleLabel-dev

./: README.md  debug.py  pyproject.toml  webui.py
data/: bills_dy.csv  bills_dy_labeled.csv  bills_zfb_sql.sql  rules_dy.csv  rules_zfb.csv
simplelabel/: __init__.py  __main__.py
simplelabel/core/: __init__.py  mapper.py  parser.py  rule.py
simplelabel/utils/: __init__.py  generator.py
